# College-Home-Learning

./: README.md  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  dockerfile  pyproject.toml
backend/app/: main.py
backend/app/database/: __init__.py  connection.py
backend/app/database/models/: Groups.py  Permissions.py  Permissions_and_roles.py  Roles.py  Students_in_groups.py  Subject_info.py  Subjects.py  Users.py  __init__.py
