[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["MagnetisShade <senya.krivorot11@gmail.com>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
filetype = "^1.2.0"
python-multipart = "^0.0.20"
pydantic-settings = "^2.7.1"
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
mysql-connector-python = "^9.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
Flake8-pyproject = "^1.2.3"
httpx = "^0.27.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.2"
setuptools = "^69.1.1"
flake8-bugbear = "^24.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
